--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.tfstate
 *.tfstate.*
 *.tfstate.backup
+tfstate/*
 
 # Exclude all .tfvars files, which are likely to contain sentitive data, such as
 # password, private keys, and other secrets. These should not be part of version 
@@ -26,3 +27,4 @@ terraform.rc
 
 **/.idea/*
 .DS_Store
+backend.tf
